<resources>
    <string name="app_name">University Notes Holder</string>
    <!--    <string name="username">Username</string>-->
    <string name="university_notes_holder">University Notes Holder</string>
    <!--    <string name="password">Password</string>-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notes">Notes</string>
    <string name="cs">cs</string>
    <string name="electrica">electrica</string>
    <string name="mech">mech</string>
    <string name="entc" />
    <string name="entc1">entc</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="computer_science">COMPUTER SCIENCE</string>
    <string name="_2015_pattern_questions">2015 Pattern Questions</string>
    <string name="sem_5">Sem 5</string>
    <string name="back">Back</string>
    <string name="fe_notes_and_mcq">FE Notes and MCQ</string>
    <string name="sem_3">Sem 3</string>
    <string name="sem_4">Sem 4</string>
    <string name="sem_6">Sem 6</string>
    <string name="sem_7">Sem 7</string>
    <string name="sem_8">Sem 8</string>
    <string name="CIVIL">CIVIL</string>
    <string name="sem_1">Sem 1</string>
    <string name="sem_2">Sem 2</string>
    <string name="sem_4c">Sem 4</string>
    <string name="sem_3c">Sem 3</string>
    <string name="sem_5c">Sem 5</string>
    <string name="sem_6c">Sem 6</string>
    <string name="sem_7c">Sem 7</string>
    <string name="sem_8c">Sem 8</string>
    <string name="backc">Back</string>
    <string name="exit">Exit</string>
    <string name="electrical">ELECTRICAL</string>
    <string name="electronics_telecommunication"><![CDATA[ELECTRONICS & TELECOMMUNICATION]]></string>
    <string name="mechanical">MECHANICAL</string>
    <string name="name">Name</string>
    <string name="ph_number">Ph. Number</string>
    <string name="exit1">Exit</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="Enter_username">Enter username</string>
    <string name="enter_password">Enter the password</string>
</resources>