<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Notespage">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/notes"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/CSbtn"
        android:layout_width="178dp"
        android:layout_height="115dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:onClick="csnotes"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183"
        app:srcCompat="@drawable/computer"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/Civilbtn"
        android:layout_width="173dp"
        android:layout_height="122dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cs"
        android:onClick="civilnotes"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CSbtn"
        app:srcCompat="@drawable/civil" />

    <ImageButton
        android:id="@+id/electricalbtn"
        android:layout_width="173dp"
        android:layout_height="139dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/electrica"
        android:onClick="electricalnotes"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Civilbtn"
        app:srcCompat="@drawable/electrical1" />

    <ImageButton
        android:id="@+id/Mechabtn"
        android:layout_width="172dp"
        android:layout_height="122dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mech"
        android:onClick="mechnotes"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/Civilbtn"
        app:layout_constraintTop_toBottomOf="@+id/entcbtn"
        app:srcCompat="@drawable/mechanical" />

    <ImageButton
        android:id="@+id/entcbtn"
        android:layout_width="173dp"
        android:layout_height="111dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/entc1"
        android:onClick="entcnotes"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/CSbtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/entc" />

    <Button
        android:id="@+id/homebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="homebtn"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/electricalbtn" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="backbt"
        android:text="Back"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>